include review feedback

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,11 +2,11 @@ Copyright (c) 2020, Institute of Energy Systems, Energy Efficiency and Energy Ec
 All rights reserved.
 
 # Authors
-The following files lists all authors that have been involved in the development of SIMONA either based due their
+This file lists all authors that have been involved in the development of simbench2psdm either based due their
 involvement in related research projects, as research assistants or by making voluntarily contributions.
 
 ### Research Associates
-#### Initial Work
+#### Initial Work / 1. Generation
 Lead Developers:
     - Chris Kittl
 
